--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -40,24 +40,16 @@
             app:layout_constraintTop_toTopOf="parent" />
         <!--android:layout_alignBottom="@id/cover_imageview"-->
 
-        <TextView
-            android:id="@+id/business_name_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ZX100"
-            android:textSize="30sp"
-            app:layout_anchor="@+id/modem_imageview"
-            app:layout_anchorGravity="bottom|center" />
-
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="220dp"
+            android:layout_marginTop="200dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="170dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
