adding projection in getModems

--- a/Application/app/src/main/res/values/colors.xml
+++ b/Application/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#FFBE00</color>
     <color name="colorAccent">#FF4081</color>
     <color name="transparent">#00000000</color>
-    <color name="shadow">#44000000</color>
+    <color name="shadow">#ffffff</color>
 </resources>
